RST-7188 - Use job for generating PDFs

--- a/app/assets/stylesheets/local/misc.scss
+++ b/app/assets/stylesheets/local/misc.scss
@@ -191,3 +191,9 @@ dl.app-description-list {
     }
   }
 }
+
+a.govuk-button.govuk-button--disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: not-allowed;
+}
