RST-7188 - Initialise moj using jQuery

--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -99,7 +99,7 @@
 
     initAll();
 
-    window.moj.init();
+    $(moj.init);
 </script>
 
 <%= javascript_include_tag 'application', integrity: true, crossorigin: 'anonymous' %>
