--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -94,15 +94,15 @@
 
 <script src="<%= asset_path 'govuk-frontend/dist/govuk/govuk-frontend.min.js' %>" type="module"></script>
 
+<%= javascript_include_tag 'application', integrity: true, crossorigin: 'anonymous' %>
+
 <script type="module">
     import { initAll } from '<%= asset_path "govuk-frontend/dist/govuk/govuk-frontend.min.js" %>';
 
     initAll();
 
-    $(moj.init);
+    window.moj.init();
 </script>
-
-<%= javascript_include_tag 'application', integrity: true, crossorigin: 'anonymous' %>
 
 <%= yield :body_end %>
 </body>
