--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -96,12 +96,11 @@
 
 <script type="module">
     import { initAll } from '<%= asset_path "govuk-frontend/dist/govuk/govuk-frontend.min.js" %>';
+    initAll();
 
-    $(document).ready(function() {
-        initAll();
-
+    if (window.moj && typeof window.moj.init === 'function') {
         window.moj.init();
-    });
+    }
 </script>
 
 <%= javascript_include_tag 'application', integrity: true, crossorigin: 'anonymous' %>
