--- a/app/views/steps/application/check_your_answers/edit.html.erb
+++ b/app/views/steps/application/check_your_answers/edit.html.erb
@@ -56,10 +56,9 @@
         <p id="draftGeneratingMessage">
           <%= t('.details.generating_message') %>
         </p>
-        <%= link_to t('.details.download_draft_button'),
-                    steps_completion_summary_path(format: :pdf, type: 'draft'),
-                    class: 'govuk-button govuk-button--secondary govuk-button--disabled', id: 'draftDownloadButton' %>
-
+        <%= link_button t('.details.download_draft_button'), steps_completion_summary_path(format: :pdf, type: 'draft'),
+                    class: 'govuk-button--secondary govuk-button--disabled', id: 'draftDownloadButton',
+                    data: { ga_category: 'check your answers', ga_label: 'download draft' } %>
       </div>
     </details>
   </div>
