--- a/app/views/steps/shared/_download_pdf_copy.en.html.erb
+++ b/app/views/steps/shared/_download_pdf_copy.en.html.erb
@@ -9,5 +9,10 @@
   </div>
 <% end %>
 
-<%= link_button 'Download your application', steps_completion_summary_path(format: :pdf), class: 'ga-pageLink', download: '',
-                data: { module: 'govuk-button', ga_category: 'completion', ga_label: 'download application' } %>
+<p id="completedGeneratingMessage">
+  <%= t('.generating_message') %>
+</p>
+
+<%= link_button 'Download your application', steps_completion_summary_path(format: :pdf, type: 'completed'),
+            class: 'govuk-button--disabled', id: 'completedDownloadButton',
+            data: { ga_category: 'check your answers', ga_label: 'download draft' } %>
