--- a/app/views/steps/completion/summary/show.pdf.erb
+++ b/app/views/steps/completion/summary/show.pdf.erb
@@ -1,3 +1,9 @@
+<% if request.format.html? %>
+  <title><%= t('.draft_application_title') %></title>
+  <link rel="icon" sizes="48x48" href="<%= asset_path 'govuk-frontend/dist/govuk/assets/images/favicon.ico' %>" />
+  <link rel="icon" sizes="any" href="<%= asset_path 'govuk-frontend/dist/govuk/assets/images/favicon.svg' %>" type="image/svg+xml">
+<% end %>
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,6 +13,7 @@
   </head>
 
   <body id="application-details-pdf" class="status-<%= presenter.c100_application.status %>">
+    <p class="draft-watermark"><%= t('.watermark') %></p>
     <%= render presenter.sections %>
   </body>
 </html>
