--- a/app/views/steps/completion/shared/_admin_date_issued.en.pdf.erb
+++ b/app/views/steps/completion/shared/_admin_date_issued.en.pdf.erb
@@ -4,15 +4,6 @@
   </td>
 
   <td class="answer answer-value">
-    <input class="box-to-fill date-box" type="text" maxlength="1" name="date-d1"/>
-    <input class="box-to-fill date-box" type="text" maxlength="1" name="date-d2"/>
-    <span class="separator"></span>
-    <input class="box-to-fill date-box" type="text" maxlength="1" name="date-m1"/>
-    <input class="box-to-fill date-box" type="text" maxlength="1" name="date-m2"/>
-    <span class="separator"></span>
-    <input class="box-to-fill date-box" type="text" maxlength="1" name="date-y1"/>
-    <input class="box-to-fill date-box" type="text" maxlength="1" name="date-y2"/>
-    <input class="box-to-fill date-box" type="text" maxlength="1" name="date-y3"/>
-    <input class="box-to-fill date-box" type="text" maxlength="1" name="date-y4"/>
+    <input class="box-to-fill" type="text" maxlength="10" name="date"/>
   </td>
 </tr>
